# audio-playground

./: .gitignore  Cargo.toml  flake.nix
src/: audio.rs  main.rs  midi.rs  state.rs  ui.rs
