[package]
name = "audio_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cpal = "0.15.3"
eframe = "0.29.1"
egui = "0.29.1"
egui_plot = "0.29.0"
midir = "0.10.1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
